...
                                            <variation key="default">
                                                <mask key="constraints">
                                                    <exclude reference="6aq-UE-U7j"/>
                                                </mask>
                                            </variation>
                                        </imageView>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contact" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9sw-nh-GJp" userLabel="Contact Name">
                                            <rect key="frame" x="83" y="24" width="63" height="21"/>
                                            <animations/>
                                            <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="17"/>
                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                            <nil key="highlightedColor"/>
                                        </label>
...
                        <sections/>
                        <connections>
                            <outlet property="dataSource" destination="pGg-6v-bdr" id="P41-gY-KXY"/>
                            <outlet property="delegate" destination="pGg-6v-bdr" id="Y6K-Cp-Qkv"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Contacts" id="tQt-TN-PWz">
                        <barButtonItem key="leftBarButtonItem" systemItem="edit" id="iKW-o7-3q4"/>
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="GDu-o0-ZFc">
                            <connections>
                                <segue destination="kMr-2t-RdO" kind="presentation" identifier="showEditScreen" id="Bh3-C2-E1m"/>
                            </connections>
                        </barButtonItem>
...
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="fyF-rt-AuR" id="mPo-Rb-Wtv"/>
                            <outlet property="delegate" destination="fyF-rt-AuR" id="l3t-N0-05Y"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Edit Contact Details" id="Y0p-ZM-ckx">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="PgW-ET-nBA">
                            <connections>
                                <action selector="didCancel:" destination="fyF-rt-AuR" id="UDn-cc-LmT"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="done" id="5I2-CX-gDG">
...
