...
- (void)viewDidLoad
{
    [super viewDidLoad];
    
    self.navigationItem.leftBarButtonItem = self.editButtonItem;
    
    self.view.accessibilityIdentifier = @"com.vc.contactsList";
}

- (void)viewWillAppear:(BOOL)animated
{
    [super viewWillAppear:animated];
    
...
